monitoring/prometheus-msteams/templates/service.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.msteams.enabled:
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-msteams
  namespace: prometheus
  labels: #@ labels()
spec:
  ports:
  - port: 2000
    targetPort: 2000
  selector: #@ labels()
#@ end
