monitoring/prometheus-msteams/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.msteams.enabled:
#@ if data.values.monitoring.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-msteams
  namespace: prometheus
  labels: #@ labels()
spec:
  podSelector:
    matchLabels: #@ labels()
  ingress:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 2000
#@ end
#@ end
